--- a/ui/src/Welcome/Welcome.css
+++ b/ui/src/Welcome/Welcome.css
@@ -10,16 +10,16 @@
   align-items: center;
 }
 
+.Welcome h3 {
+  margin-top: 1em;
+}
+
 .Welcome a {
   text-decoration: none;
 }
 
-.Welcome h1 {
-  font-weight: 500;
-}
-
 .Welcome p {
-  margin-top: 0;
+  margin: 0 0 1em 0;
 }
 
 .sml-logo {
