renames the RecoverLostPassword component

--- a/ui/src/RecoverLostPassword/RecoverLostPassword.css
+++ b/ui/src/RecoverLostPassword/RecoverLostPassword.css
@@ -1,11 +1,11 @@
-.ResetPassword {
+.RecoverLostPassword {
   display: flex;
   align-items: center;
   flex-direction: column;
   margin-top: 1em;
 }
 
-.ResetPassword form {
+.RecoverLostPassword form {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -13,7 +13,7 @@
 }
 
 @media (min-width: 768px) {
-  .ResetPassword form {
+  .RecoverLostPassword form {
     width: 25%;
   }
 }
