login/logout functionality

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -22,6 +22,10 @@ body {
   box-sizing: border-box;
 }
 
+a {
+  cursor: pointer;
+}
+
 .validation-message {
   color: crimson;
   margin-bottom: 1em;
