adds ProfileDetails and basic scaffolding for PasswordDetails

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -4,6 +4,8 @@
 @import "ForkMe/ForkMe.css";
 @import "NavBar/NavBar.css";
 @import "NotFound/NotFound.css";
+@import "PasswordDetails/PasswordDetails.css";
+@import "ProfileDetails/ProfileDetails.css";
 @import "Register/Register.css";
 @import "RecoverLostPassword/RecoverLostPassword.css";
 @import "Spinner/Spinner.css";
